# cardsudemy/measurements/src/models/measurement.ts
@@ -44,93 +44,93 @@ import mongoose from 'mongoose';
 */
 
 interface MeasurementAttrs {
-  id: number;
-  stn: number;
-  yyyymmdd: number;
-  ddvec: number;
-  fhvec: number;
-  fg: number;
-  fhx: number;
-  fhxh: number;
-  fhn: number;
-  fhnh: number;
-  fxx: number;
-  fxxh: number;
-  tg: number;
-  tn: number;
-  tnh: number;
-  tx: number;
-  txh: number;
-  t10n: number;
-  t10nh: number;
-  sq: number;
-  sp: number;
-  q: number;
-  dr: number;
-  rh: number;
-  rhx: number;
-  rhxh: number;
-  pg: number;
-  px: number;
-  pxh: number;
-  pn: number;
-  pnh: number;
-  vvn: number;
-  vvnh: number;
-  vvx: number;
-  vvxh: number;
-  ng: number;
-  ug: number;
-  ux: number;
-  uxh: number;
-  un: number;
-  unh: number;
-  ev24: number;
+  measurementid: string;
+  stn: string;
+  yyyymmdd: string;
+  ddvec: string;
+  fhvec: string;
+  fg: string;
+  fhx: string;
+  fhxh: string;
+  fhn: string;
+  fhnh: string;
+  fxx: string;
+  fxxh: string;
+  tg: string;
+  tn: string;
+  tnh: string;
+  tx: string;
+  txh: string;
+  t10n: string;
+  t10nh: string;
+  sq: string;
+  sp: string;
+  q: string;
+  dr: string;
+  rh: string;
+  rhx: string;
+  rhxh: string;
+  pg: string;
+  px: string;
+  pxh: string;
+  pn: string;
+  pnh: string;
+  vvn: string;
+  vvnh: string;
+  vvx: string;
+  vvxh: string;
+  ng: string;
+  ug: string;
+  ux: string;
+  uxh: string;
+  un: string;
+  unh: string;
+  ev24: string;
 }
 
 export interface MeasurementDoc extends mongoose.Document {
-  id: number;
-  stn: number;
-  yyyymmdd: number;
-  ddvec: number;
-  fhvec: number;
-  fg: number;
-  fhx: number;
-  fhxh: number;
-  fhn: number;
-  fhnh: number;
-  fxx: number;
-  fxxh: number;
-  tg: number;
-  tn: number;
-  tnh: number;
-  tx: number;
-  txh: number;
-  t10n: number;
-  t10nh: number;
-  sq: number;
-  sp: number;
-  q: number;
-  dr: number;
-  rh: number;
-  rhx: number;
-  rhxh: number;
-  pg: number;
-  px: number;
-  pxh: number;
-  pn: number;
-  pnh: number;
-  vvn: number;
-  vvnh: number;
-  vvx: number;
-  vvxh: number;
-  ng: number;
-  ug: number;
-  ux: number;
-  uxh: number;
-  un: number;
-  unh: number;
-  ev24: number;
+  measurementid: string;
+  stn: string;
+  yyyymmdd: string;
+  ddvec: string;
+  fhvec: string;
+  fg: string;
+  fhx: string;
+  fhxh: string;
+  fhn: string;
+  fhnh: string;
+  fxx: string;
+  fxxh: string;
+  tg: string;
+  tn: string;
+  tnh: string;
+  tx: string;
+  txh: string;
+  t10n: string;
+  t10nh: string;
+  sq: string;
+  sp: string;
+  q: string;
+  dr: string;
+  rh: string;
+  rhx: string;
+  rhxh: string;
+  pg: string;
+  px: string;
+  pxh: string;
+  pn: string;
+  pnh: string;
+  vvn: string;
+  vvnh: string;
+  vvx: string;
+  vvxh: string;
+  ng: string;
+  ug: string;
+  ux: string;
+  uxh: string;
+  un: string;
+  unh: string;
+  ev24: string;
 }
 
 interface MeasurementModel extends mongoose.Model<MeasurementDoc> {
@@ -139,134 +139,134 @@ interface MeasurementModel extends mongoose.Model<MeasurementDoc> {
 
 const measurementSchema = new mongoose.Schema(
   {
-    id: {
-      type: Number,
+    measurementid: {
+      type: String,
       required: true,
     },
     stn: {
-      type: Number,
+      type: String,
       required: true,
     },
     yyyymmdd: {
-      type: Number,
+      type: String,
       required: true,
     },
     ddvec: {
-      type: Number,
+      type: String,
     },
     fhvec: {
-      type: Number,
+      type: String,
     },
     fg: {
-      type: Number,
+      type: String,
     },
     fhx: {
-      type: Number,
+      type: String,
     },
     fhxh: {
-      type: Number,
+      type: String,
     },
     fhn: {
-      type: Number,
+      type: String,
     },
     fhnh: {
-      type: Number,
+      type: String,
     },
     fxx: {
-      type: Number,
+      type: String,
     },
     fxxh: {
-      type: Number,
+      type: String,
     },
     tg: {
-      type: Number,
+      type: String,
     },
     tn: {
-      type: Number,
+      type: String,
     },
     tnh: {
-      type: Number,
+      type: String,
     },
     tx: {
-      type: Number,
+      type: String,
     },
     txh: {
-      type: Number,
+      type: String,
     },
     t10n: {
-      type: Number,
+      type: String,
     },
     t10nh: {
-      type: Number,
+      type: String,
     },
     sq: {
-      type: Number,
+      type: String,
     },
     sp: {
-      type: Number,
+      type: String,
     },
     q: {
-      type: Number,
+      type: String,
     },
     dr: {
-      type: Number,
+      type: String,
     },
     rh: {
-      type: Number,
+      type: String,
     },
     rhx: {
-      type: Number,
+      type: String,
     },
     rhxh: {
-      type: Number,
+      type: String,
     },
     pg: {
-      type: Number,
+      type: String,
     },
     px: {
-      type: Number,
+      type: String,
     },
     pxh: {
-      type: Number,
+      type: String,
     },
     pn: {
-      type: Number,
+      type: String,
     },
     pnh: {
-      type: Number,
+      type: String,
     },
     vvn: {
-      type: Number,
+      type: String,
     },
     vvnh: {
-      type: Number,
+      type: String,
     },
     vvx: {
-      type: Number,
+      type: String,
     },
     vvxh: {
-      type: Number,
+      type: String,
     },
     ng: {
-      type: Number,
+      type: String,
     },
     ug: {
-      type: Number,
+      type: String,
     },
     ux: {
-      type: Number,
+      type: String,
     },
     uxh: {
-      type: Number,
+      type: String,
     },
     un: {
-      type: Number,
+      type: String,
     },
     unh: {
-      type: Number,
+      type: String,
     },
     ev24: {
-      type: Number,
+      type: String,
     },
   },
   {
