# cardsudemy/measurements/src/routes/show.ts
@@ -4,8 +4,8 @@ import { Measurement } from '../models/measurement';
 
 const router = express.Router();
 
-router.get('/api/measurements/single/:id', async (req: Request, res: Response) => {
-  const measurement = await Measurement.findById(req.params.id);
+router.get('/api/measurements/:id', async (req: Request, res: Response) => {
+  const measurement = await Measurement.findOne({measurementid: req.params.id});
 
   if (!measurement) {
     throw new NotFoundError();
